# CMS-cut-machine

./: .gitignore  README.md  package-lock.json  parser-optimizer.html
documents/Cn debout/: A13.nc2  A3.nc2  A6.nc2  A7.nc2
documents/Cn … plat/: A1.nc2  A15.nc2  A19.nc2  A21.nc2  A4.nc2
documents/F4C debout/: A14.F4C  A5.F4C  A6.F4C  A9.F4C
documents/all f4c/: A1.F4C  A10.F4C  A12.F4C  A13.F4C  A15.F4C  A16.F4C  A19.F4C  A20.F4C  A21.F4C  A3.F4C  A4.F4C  A7.F4C  A8.F4C
executable/: index.html
executable/multi-files-web/: index.html  main.css
fichiers_modele/: 67.nc2  FFD meilleur que Smartcut gratuit.csv  ILP meilleur que FFD.csv  PGM-01.F4C  cas_1.F4C  cas_1.nc2  cas_5.nc2
fichiers_modele/Les 5 cas en .nc2 /: cas_2.nc2
fichiers_modele/Les 5 cas en nc2 /: cas_3.nc2  cas_4.nc2
fichiers_modele/nc2 a plat/: A10.nc2  A12.nc2  A16.nc2  A20.nc2
fichiers_modele/nc2 debout/: A14.nc2  A5.nc2  A8.nc2  A9.nc2
parser-optimizer/: build-all.bat  build-all.ps1  copy-executables.ps1  copy-executables.sh  package-lock.json  package.json  webpack.config.js
parser-optimizer/electron/: main.js  preload.js
parser-optimizer/executable/: index.html
parser-optimizer/parser-comparator/: index.html  parser.js  script.js  style.css
parser-optimizer/scripts/: move-webfiles.js  optimize-bundle.js
parser-optimizer/src/: index.html
parser-optimizer/src-tauri/: Cargo.toml  tauri.conf.json
parser-optimizer/src-tauri/src/: main.rs
web-files/: bundle.js  index.html  main.css  main.f1c8de1aa419c9041980.hot-update.js
windows-executable/: CMS-F4C-Generator-Windows.msi
(+32 files in other folders)
