[package]
name = "cms-f4c-generator"
version = "1.0.0"
description = "CMS F4C Generator - Optimisation de découpe"
authors = ["your-name"]
license = ""
repository = ""
default-run = "cms-f4c-generator"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-minimize", "window-show", "window-start-dragging", "window-maximize", "window-hide", "window-close", "window-unmaximize", "window-unminimize", "fs-write-file", "dialog-save", "fs-exists", "dialog-open", "shell-open", "fs-read-file"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
